--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -72,7 +72,9 @@
     </head>
     <body>
         <% include baseTexts() %>
-        <% include boardTexts() %>
+        <% if ( content.mode.name != "ascetic" ) %>
+            <% include boardTexts() %>
+        <% end %>
         <input type="hidden" id="lastPostNumber" value="<%= lastPostNumber %>" />
         <% include customHeader() %>
         <% include navigationButton("bottom") %>
@@ -103,7 +105,7 @@
             </div>
         <% end %>
         <% include threads() %>
-        <% if ( content.postingEnabled ) %>
+        <% if ( content.mode.name != "ascetic" && content.postingEnabled ) %>
             <hr />
             <% include createAction("Bottom") %>
         <% end %>
