--- a/src/lib/template/rpg_thread.tmpl
+++ b/src/lib/template/rpg_thread.tmpl
@@ -19,7 +19,7 @@
             <% else %>
                 <div name="voteVariants">
                     <% c++ for (int i = 0; i < 10; ++i) { %>
-                        <% c++ out() << "<input type=\"text\" name=\"voteVariant" << (i + 1) << "\" accept=\"" << content.supportedFileTypes << "\" />"; %>
+                        <% c++ out() << "<input type=\"text\" name=\"voteVariant" << (i + 1) << "\" size=\"43\" />"; %>
                         <% c++ if (i < 9) {%>
                             <br />
                         <% c++ } %>
